--- a/template/base.html
+++ b/template/base.html
@@ -5,30 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Store - {% block title %}{% endblock title %}</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-...." crossorigin="anonymous" />
     {% block styles %} {% endblock styles %}
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
         @import url('https://fonts.cdnfonts.com/css/noteworthy');
-        html,body{
-            font-family: 'Poppins'!important;
+
+        html,
+        body {
+            font-family: 'Poppins' !important;
         }
-        .body-container{
+
+        .body-container {
             min-height: 80vh;
         }
-        h1,h2,h3,h4{
-            font-family: 'Noteworthy'!important;
+
+        h1,
+        h2,
+        h3,
+        h4 {
+            font-family: 'Noteworthy' !important;
             color: #38a509;
         }
+
         .navbar-expand-lg .navbar-collapse {
             justify-content: right;
         }
 
         .nav-link {
-            color: white!important;
+            color: white !important;
         }
 
         .nav-link:hover {
@@ -56,6 +63,7 @@
         .navbar {
             background-color: #1A6F67 !important;
             color: #fff;
+            min-height: 30px;
         }
 
         .navbar-brand {
@@ -84,7 +92,7 @@
 
         .cart {
             height: 30px;
-            background-color: #38a509 ;
+            background-color: #38a509;
         }
 
         .cart i {
@@ -117,27 +125,89 @@
             background-color: #f49820;
             margin-inline: 0;
         }
-        .navbar-brand img{
-            position: absolute;top: 10px;border-radius: 50%;z-index: 999; width: 100px;height: 100px;
+
+        .navbar-brand img {
+            position: absolute;
+            top: 10px;
+            border-radius: 50%;
+            z-index: 999;
+            width: 100px;
+            height: 100px;
             border: #38a509 solid 5px;
             border-top: #1A6F67 solid 5px;
             border-left: #1A6F67 solid 5px;
         }
-        .btn-ss{
+
+        .btn-ss {
             border: #38a509 solid 1px !important;
             color: #38a509 !important;
         }
-        .btn-ss:hover{
-            color: white !important;;
+
+        .btn-ss:hover {
+            color: white !important;
             background-color: #38a509 !important;
         }
-        .btn-sr{
+
+        .btn-sr {
             border: #eb676d solid 1px !important;
             color: #eb676d !important;
         }
-        .btn-sr:hover{
-            color: white !important;;
+
+        .btn-sr:hover {
+            color: white !important;
+            ;
             background-color: #eb676d !important;
+        }
+        #logo-image {
+                transition: all 0.5s linear(0 0%, 0.22 2.1%, 0.86 6.5%, 1.11 8.6%, 1.3 10.7%, 1.35 11.8%, 1.37 12.9%, 1.37 13.7%, 1.36 14.5%, 1.32 16.2%, 1.03 21.8%, 0.94 24%, 0.89 25.9%, 0.88 26.85%, 0.87 27.8%, 0.87 29.25%, 0.88 30.7%, 0.91 32.4%, 0.98 36.4%, 1.01 38.3%, 1.04 40.5%, 1.05 42.7%, 1.05 44.1%, 1.04 45.7%, 1 53.3%, 0.99 55.4%, 0.98 57.5%, 0.99 60.7%, 1 68.1%, 1.01 72.2%, 1 86.7%, 1 100%);
+            }
+
+        .logo-moved {
+            right: 20px!important;
+            top: 70px!important;
+            width: 120px!important;
+            height: 120px!important;
+            left: auto!important;
+        }
+        .footer-desktop{
+            display: block;
+        }
+        .footer-mobile{
+            display: none;
+        }
+
+        @media (max-width: 767px) {
+            .navbar-toggler:focus{
+                box-shadow:0 0 0 0.25rem #38a509
+            }
+            .navbar-search {
+                display: none !important;
+            }
+
+            .cart i {
+                height: 65px;
+                width: 65px;
+                bottom: 0;
+                padding: 14px;
+                padding-inline: 7px;
+                font-size: 35px;
+                position: fixed;
+                color: #1A6F67;
+                background-color: white;
+                border: #1A6F67 solid 4px;
+            }
+
+            .navbar-brand img {
+                left: 20px;
+                width: 80px;
+                height: 80px;
+            }
+            .footer-desktop{
+                display: none;
+            }
+            .footer-mobile{
+                display: block;
+            }
         }
     </style>
 </head>
@@ -147,14 +217,20 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light px-5">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#"><img src="/static/products/22222.jpg" alt="Logo"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"
+                    style="background-color: white;position: absolute;right: 20px;">
+                    <span class="navbar-toggler-icon" style="color: #1A6F67;" onclick="moveLogo()"></span>
+                </button>
+                <a class="navbar-brand" href="/about/"><img id="logo-image" src="/static/products/22222.jpg" alt="Logo"></a>
             </div>
             <form action="{% url 'product_search' %}" method="get" class="navbar-search d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search Here..." aria-label="Search" name="q">
+                <input class="form-control me-2" type="search" placeholder="Search Here..." aria-label="Search"
+                    name="q">
                 <button class="btn btn-navbar" type="submit">Search</button>
             </form>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
+            <div class="navbar-collapse collapse" id="navbarNav">
+                <ul class="nav navbar-nav navbar-right ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="/">Home</a>
                     </li>
@@ -202,27 +278,34 @@
     </section>
 
 
-    <footer class="text-white">
+    <footer class="text-white footer-desktop">
         <!-- <div class="top-footer px-5"></div> -->
         <div class="row main-footer p-5 mt-5 mb-1">
             <div class="col-6 col-md-2 mb-3">
                 <h5>CONTACT INFO</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><h6 style="font-weight: bolder;">ADDRESS</h6><span>
-                        A-123, ABC, XYZ,
-                        Maqbara Road, Ayodhya.</span></li>
-                    <li class="nav-item mb-2"><h6 style="font-weight: bolder;">PHONE</h6><span>+91 7248432377</span></li>
-                    <li class="nav-item mb-2"><h6 style="font-weight: bolder;">EMAIL</h6><span>aniket@tradalab.tech</span></li>
+                    <li class="nav-item mb-2">
+                        <h6 style="font-weight: bolder;">ADDRESS</h6><span>
+                            A-123, ABC, XYZ,
+                            Maqbara Road, Ayodhya.</span>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <h6 style="font-weight: bolder;">PHONE</h6><span>+91 7248432377</span>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <h6 style="font-weight: bolder;">EMAIL</h6><span>aniket@tradalab.tech</span>
+                    </li>
                 </ul>
             </div>
 
             <div class="col-6 col-md-2 mb-3">
                 <h5>SNEH-SATTVA</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Contact</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Customer Support</a></li>
+                    <li class="nav-item mb-2"><a href="/" class="nav-link p-0 text-muted">Home</a></li>
+                    <li class="nav-item mb-2"><a href="/contact/" class="nav-link p-0 text-muted">Contact</a></li>
+                    <li class="nav-item mb-2"><a href="/about/" class="nav-link p-0 text-muted">About</a></li>
+                    <li class="nav-item mb-2"><a href="/store/CustomerSupport/" class="nav-link p-0 text-muted">Customer
+                            Support</a></li>
                 </ul>
             </div>
 
@@ -248,9 +331,12 @@
                     </div>
                 </form>
                 <ul class="list-unstyled d-flex my-5">
-                    <li class="mx-3"><a class="link-light" href="#"><i style="font-size:xx-large;" class="fab fa-linkedin"></i></a></li>
-                    <li class="mx-3"><a class="link-light" href="#"><i style="font-size:xx-large;" class="fab fa-instagram"></i></a></li>
-                    <li class="mx-3"><a class="link-light" href="#"><i style="font-size:xx-large;" class="fab fa-facebook"></i></a></li>
+                    <li class="mx-3"><a class="link-light" href="#"><i style="font-size:xx-large;"
+                                class="fab fa-linkedin"></i></a></li>
+                    <li class="mx-3"><a class="link-light" href="#"><i style="font-size:xx-large;"
+                                class="fab fa-instagram"></i></a></li>
+                    <li class="mx-3"><a class="link-light" href="#"><i style="font-size:xx-large;"
+                                class="fab fa-facebook"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -258,15 +344,80 @@
             <p style="text-align: center !important;width: 100%;">© 2023 SNEH-SATTVA, Inc. All rights reserved.</p>
         </div>
     </footer>
-
+    
+    <footer class="text-white footer-mobile">
+        <div class="row main-footer p-3 mt-5 mb-1">
+            <div class="col-12 col-md-6 col-lg-3 mb-3">
+                <h5>CONTACT INFO</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2">
+                        <h6 style="font-weight: bolder;">ADDRESS</h6><span>
+                            A-123, ABC, XYZ,
+                            Maqbara Road, Ayodhya.</span>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <h6 style="font-weight: bolder;">PHONE</h6><span>+91 7248432377</span>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <h6 style="font-weight: bolder;">EMAIL</h6><span>aniket@tradalab.tech</span>
+                    </li>
+                </ul>
+            </div>
+    
+            <div class="col-12 col-md-6 col-lg-3 mb-3">
+                <h5>SNEH-SATTVA</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="/" class="nav-link p-0 text-muted">Home</a></li>
+                    <li class="nav-item mb-2"><a href="/contact/" class="nav-link p-0 text-muted">Contact</a></li>
+                    <li class="nav-item mb-2"><a href="/about/" class="nav-link p-0 text-muted">About</a></li>
+                    <li class="nav-item mb-2"><a href="/store/CustomerSupport/" class="nav-link p-0 text-muted">Customer
+                            Support</a></li>
+                </ul>
+            </div>
+    
+            <div class="col-12 col-md-6 col-lg-3 mb-3">
+                <h5>LEGAL</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Privacy Policy</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Shipping & Delivery</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Disclaimer</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Return & Exchange</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+                </ul>
+            </div>
+    
+            <div class="col-12 col-md-6 col-lg-3 mb-3">
+                <h5>BULK ORDERS</h5>
+                <form>
+                    <p>For bulk order enquiry provide us your email.</p>
+                    <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+                        <label for="newsletter1" class="visually-hidden">Email address</label>
+                        <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+                        <button class="btn btn-light" type="button">Enquire</button>
+                    </div>
+                </form>
+                <ul class="list-unstyled d-flex my-3 justify-content-around">
+                    <li><a class="link-light" href="#"><i style="font-size:xx-large;" class="fab fa-linkedin"></i></a></li>
+                    <li><a class="link-light" href="#"><i style="font-size:xx-large;" class="fab fa-instagram"></i></a></li>
+                    <li><a class="link-light" href="#"><i style="font-size:xx-large;" class="fab fa-facebook"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    
+        <div class="d-flex flex-column flex-sm-row justify-content-between py-2 main-footer px-3">
+            <p style="text-align: center !important;width: 100%;">© 2023 SNEH-SATTVA, Inc. All rights reserved.</p>
+        </div>
+    </footer>
+    
     <!-- Bootstrap JS and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
@@ -289,6 +440,22 @@
         });
 
     </script>
+    <script>
+        function moveLogo() {
+            var image = document.getElementById("logo-image");
+            var navbarButton = document.querySelector("[data-target='#navbarNav']");
+    
+            // Check if the navbar is collapsed
+            if (navbarButton.getAttribute("aria-expanded") === "false") {
+                // If collapsed, add the 'logo-moved' class to the image
+                image.classList.add("logo-moved");
+            } else {
+                // If not collapsed, remove the 'logo-moved' class from the image
+                image.classList.remove("logo-moved");
+            }
+        }
+    </script>
+    
 
     {% block javascript %}{% endblock javascript %}
 </body>
