--- a/template/base.html
+++ b/template/base.html
@@ -183,7 +183,9 @@
             .navbar-search {
                 display: none !important;
             }
-
+            .mobile-hidden{
+                display: none;
+            }
             .cart i {
                 height: 65px;
                 width: 65px;
