--- a/template/index.html
+++ b/template/index.html
@@ -23,7 +23,7 @@
 
         .card img {
             height: 200px;
-            object-fit: cover;
+            object-fit: contain;
             width: 100%;
             border-bottom: 1px solid #ddd;
         }
@@ -35,6 +35,11 @@
 
         .card-text {
             margin-bottom: 10px;
+        }
+        @media (max-width: 767px){
+            .card-title{
+                font-size: 1rem;
+            }
         }
     </style>
 {% endblock styles %}
@@ -85,14 +90,20 @@
         <h2>Recommended Products</h2>
         <div class="row">
             {% for product in recommended_products %}
-                <div class="col-md-4">
+                <div class="col-md-4 my-3">
                     <div class="card">
                         <img src="{{product.img}}" class="card-img-top" alt="Product Image">
                         <div class="card-body">
                             <h5 class="card-title">{{ product.name }}</h5>
-                            <p class="card-text">{{ product.description }}</p>
+                            <p class="card-text mobile-hidden">{{ product.description }}</p>
                             <p class="card-text">Price: ₹{{ product.price }}</p>
-                            <a href="{% url 'product_detail' product_id=product.id %}" class="btn btn-ss">Check Out</a>
+                            <div style="display: flex;justify-content: space-between;align-items: center;">
+                                <a href="{% url 'product_detail' product_id=product.id %}" class="btn btn-ss">Check Out</a>
+                                <form method="post" action="{% url 'add_to_cart' product.id %}">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn"><i style="font-size: 2rem;color: #eb676d;" class="fa-solid fa-cart-plus"></i></button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
