--- a/template/store/product_list.html
+++ b/template/store/product_list.html
@@ -5,6 +5,29 @@ Products
 {% endblock title %}
 {% block styles %}
 <link rel="stylesheet" href="{% static 'store/css/product_detail.css' %}">
+<style>
+    .card-img-top{
+        height: 200px;
+        object-fit: contain;
+        width: 100%;
+        border-bottom: 1px solid #ddd;
+    }
+    @media (max-width: 767px){
+        .card{
+            display: flex;
+            flex-direction: row;
+        }
+        .card-img-top{
+            height: 200px;
+            width: 200px;
+            border-bottom: none;
+        }
+        .card-title{
+            font-size: 1rem;
+            font-weight: bold;
+        }
+    }
+</style>
 {% endblock styles %}
 
 
@@ -19,9 +42,16 @@ Products
                     <img src="{{product.img}}" class="card-img-top" alt="Product Image">
                     <div class="card-body">
                         <h5 class="card-title">{{ product.name }}</h5>
-                        <p class="card-text">{{ product.description }}</p>
-                        <p class="card-text">Price: ₹{{ product.price }}</p>
-                        <a href="{% url 'product_detail' product_id=product.id %}" class="btn btn-ss">Check Out</a>
+                        <p class="card-text mobile-hidden">{{ product.description }}</p>
+                        <span class="card-text small text-decoration-line-through text-danger">MRP: ₹{{ product.price }} </span><span class="text-success mx-1 extra small">20% OFF</span>
+                        <p class="card-text text-primary">Price: ₹{{ product.price }}</p>
+                        <div style="display: flex;justify-content: space-between;align-items: center;">
+                            <a href="{% url 'product_detail' product_id=product.id %}" class="btn btn-ss">Explore</a>
+                            <form method="post" action="{% url 'add_to_cart' product.id %}">
+                                {% csrf_token %}
+                                <button type="submit" class="btn"><i style="font-size: 2rem;color: #eb676d;" class="fa-solid fa-cart-plus"></i></button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
