--- a/template/base.html
+++ b/template/base.html
@@ -139,7 +139,7 @@
         }
 
         .btn-ss {
-            border: #38a509 solid 1px !important;
+            border: #38a509 solid 1px ;
             color: #38a509 !important;
         }
 
@@ -149,7 +149,7 @@
         }
 
         .btn-sr {
-            border: #eb676d solid 1px !important;
+            border: #eb676d solid 1px ;
             color: #eb676d !important;
         }
 
