--- a/template/about.html
+++ b/template/about.html
@@ -95,7 +95,7 @@ About Us - SNEH-SATTVA COLD PRESSED OIL
                     healthy food choices.</p>
             </div>
             <div class="col-lg-6">
-                <img src="https://images.indianexpress.com/2023/07/olive-oil-health-benefits.jpg" alt="Team Image" class="about-image">
+                <img src="https://snehsattva.in/assets/img/bottle-image-slider-1440x792.jpg" alt="Team Image" class="about-image">
             </div>
         </div>
     </div>
@@ -107,13 +107,22 @@ About Us - SNEH-SATTVA COLD PRESSED OIL
         <div class="row">
             <div class="col-lg-6">
                 <h2>Our Mission</h2>
-                <p>That’s the way of life our ancestors suggested us and we are here to help you follow a healthy and happy
+                <p>That is the way of life our ancestors suggested us and we are here to help you follow a healthy and happy
                     life with all-natural, chemical-free, and affordable prices.</p>
                 <p>This is our effort to make, promote & deliver amazing things discovered by our ancestors to ensure the
                     well-being of people.</p>
             </div>
             <div class="col-lg-6">
-                <img src="https://images.indianexpress.com/2023/07/olive-oil-health-benefits.jpg" alt="Mission Image" class="about-image">
+                <div class="container mt-5">
+                    <div class="card">
+                        <div class="card-body p-4">
+                            <h5 class="card-title">Why Sneh Sattava</h5>
+                                <p class="card-text">24 X 7 Processing Capacity - MIDC Location</p>
+                                <p class="card-text">ISO 9001 Certified</p>
+                                <p class="card-text">Government Compliances - FSAII and GST Licencee</p>    
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -136,6 +145,20 @@ About Us - SNEH-SATTVA COLD PRESSED OIL
             </div>
             <div class="col-lg-6">
                 <img src="https://images.everydayhealth.com/images/diet-nutrition/olive-oil-nutrition-facts-benefits-for-skin-and-health-side-effects-more-722x406.jpg?sfvrsn=d588ad6_1" alt="Legacy Image" class="about-image">
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Map Section -->
+<section class="about-content">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h2>Visit Us</h2>
+                <div class="map">
+                    <iframe style="border: 0; width: 100%; height: 350px" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15207.914700759355!2d74.040122!3d17.651169!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb0f1842dfb498ca5!2sSneh-Sattva%20Oil%20Mills!5e0!3m2!1sen!2sin!4v1672837028195!5m2!1sen!2sin" frameborder="0" allowfullscreen=""></iframe>
+                  </div>
             </div>
         </div>
     </div>
