--- a/template/base.html
+++ b/template/base.html
@@ -301,14 +301,15 @@
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2">
                         <h6 style="font-weight: bolder;">ADDRESS</h6><span>
-                            A-123, ABC, XYZ,
-                            Maqbara Road, Ayodhya.</span>
+                            8, Meghdoot Colony,
+                            MIDC, Satara,
+                            Maharashtra, 415004</span>
                     </li>
                     <li class="nav-item mb-2">
-                        <h6 style="font-weight: bolder;">PHONE</h6><span>+91 7248432377</span>
+                        <h6 style="font-weight: bolder;">PHONE</h6><span>+91 9284501019</span>
                     </li>
                     <li class="nav-item mb-2">
-                        <h6 style="font-weight: bolder;">EMAIL</h6><span>aniket@tradalab.tech</span>
+                        <h6 style="font-weight: bolder;">EMAIL</h6><span>snehsattva@gmail.com</span>
                     </li>
                 </ul>
             </div>
@@ -367,19 +368,20 @@
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2">
                         <h6 style="font-weight: bolder;">ADDRESS</h6><span>
-                            A-123, ABC, XYZ,
-                            Maqbara Road, Ayodhya.</span>
+                            8, Meghdoot Colony,
+                            MIDC, Satara,
+                            Maharashtra, 415004</span>
                     </li>
                     <li class="nav-item mb-2">
-                        <h6 style="font-weight: bolder;">PHONE</h6><span>+91 7248432377</span>
+                        <h6 style="font-weight: bolder;">PHONE</h6><span>+91 9284501019</span>
                     </li>
                     <li class="nav-item mb-2">
-                        <h6 style="font-weight: bolder;">EMAIL</h6><span>aniket@tradalab.tech</span>
+                        <h6 style="font-weight: bolder;">EMAIL</h6><span>snehsattva@gmail.com</span>
                     </li>
                 </ul>
             </div>
     
-            <div class="col-12 col-md-6 col-lg-3 mb-3">
+            <div class="col-12 col-md-6 col-lg-3 mb-3 mobile-hidden">
                 <h5>SNEH-SATTVA</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="/" class="nav-link p-0 text-muted">Home</a></li>
