--- a/template/about.html
+++ b/template/about.html
@@ -79,7 +79,7 @@ About Us - SNEH-SATTVA COLD PRESSED OIL
 {% block body %}
 <div class="hero-section">
     <h1>SNEH-SATTVA COLD PRESSED OIL</h1>
-    <p class="text-black">Your Gateway to Health and Tradition</p>
+    <p class="text-black">🌱 Your Gateway to Health and Tradition 🌱</p>
 </div>
 
 <!-- About Us Section -->
@@ -116,10 +116,10 @@ About Us - SNEH-SATTVA COLD PRESSED OIL
                 <div class="container mt-5">
                     <div class="card">
                         <div class="card-body p-4">
-                            <h5 class="card-title">Why Sneh Sattava</h5>
-                                <p class="card-text">24 X 7 Processing Capacity - MIDC Location</p>
-                                <p class="card-text">ISO 9001 Certified</p>
-                                <p class="card-text">Government Compliances - FSAII and GST Licencee</p>    
+                            <h5 class="card-title">Why Sneh Sattava</h5><br>
+                            <p class="card-text"><i class="fa-solid fa-check-double text-success"></i> 24 X 7 Processing Capacity - MIDC Location</p><br>
+                            <p class="card-text"><i class="fa-solid fa-check-double text-success"></i> ISO 9001 Certified</p><br>
+                            <p class="card-text"><i class="fa-solid fa-check-double text-success"></i> Government Compliances - FSAII and GST Licencee</p>    
                         </div>
                     </div>
                 </div>
@@ -176,7 +176,7 @@ About Us - SNEH-SATTVA COLD PRESSED OIL
                     make pure and authentic things available to customers.</p>
             </div>
             <div class="col-lg-6">
-                <img src="https://images.everydayhealth.com/images/diet-nutrition/olive-oil-nutrition-facts-benefits-for-skin-and-health-side-effects-more-722x406.jpg?sfvrsn=d588ad6_16" alt="Ecosystem Image" class="about-image">
+                <img src="https://images.indianexpress.com/2023/07/olive-oil-health-benefits.jpg" alt="Ecosystem Image" class="about-image">
             </div>
         </div>
     </div>
