--- a/template/about.html
+++ b/template/about.html
@@ -116,9 +116,9 @@ About Us - SNEH-SATTVA COLD PRESSED OIL
                 <div class="container mt-5">
                     <div class="card">
                         <div class="card-body p-4">
-                            <h5 class="card-title">Why Sneh Sattava</h5><br>
-                            <p class="card-text"><i class="fa-solid fa-check-double text-success"></i> 24 X 7 Processing Capacity - MIDC Location</p><br>
-                            <p class="card-text"><i class="fa-solid fa-check-double text-success"></i> ISO 9001 Certified</p><br>
+                            <h5 class="card-title">Why Sneh Sattava</h5>
+                            <p class="card-text"><i class="fa-solid fa-check-double text-success"></i> 24 X 7 Processing Capacity - MIDC Location</p>
+                            <p class="card-text"><i class="fa-solid fa-check-double text-success"></i> ISO 9001 Certified</p>
                             <p class="card-text"><i class="fa-solid fa-check-double text-success"></i> Government Compliances - FSAII and GST Licencee</p>    
                         </div>
                     </div>
